fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ button {
   }
   body {
     min-width: 375px;
+    overflow: hidden;
   }
 
   .cards-container {
